--- a/galleria/src/main/resources/application.properties
+++ b/galleria/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.cache.type=none
 spring.messages.basename=messages/messages
 spring.messages.encoding=UTF-8
 spring.thymeleaf.encoding=UTF-8
+spring.jpa.hibernate.ddl-auto=update
