--- a/galleria/src/main/resources/application.properties
+++ b/galleria/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/galleria
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 server.port=8080
