--- a/galleria/src/main/resources/application.properties
+++ b/galleria/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/galleria
+spring.datasource.url=jdbc:postgresql://galleria.chas6i9ahovu.eu-central-1.rds.amazonaws.com:5432/galleria
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=masterAdmin
+spring.datasource.password=a1d2m3i4n5
 server.port=8080
 security.basic.enabled=false
 spring.thymeleaf.cache=false
